<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zoran.yamba.StatusActivity">

    <Button
        android:text="@string/button_tweet"
        android:id="@+id/buttonTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"/>

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonTweet"
        android:maxLength="@string/maxLength"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/hint_status" >
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editStatus"
        android:layout_alignStart="@+id/editStatus"
        android:layout_alignTop="@+id/buttonTweet"
        android:text="@string/maxLength"
        android:id="@+id/textCount"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>
